# Hackathon-2025

./: README.md  TRAVEL_PACKING_LIST_PLAN.md  attractions.sh  weather.sh
deepseek-travels-chat/: README.md  package-lock.json  package.json  start-backend.sh  start-servers.sh  stop-servers.sh
deepseek-travels-chat/backend/: README.md  SYSTEM_PROMPT.txt  agent.py  main.py  main_simple.py  requirements.txt
deepseek-travels-chat/src/: App.vue
deepseek-travels-chat/src/components/: ChatInterface.vue
deepseek-travels-chat/src/composables/: useServerStatus.ts
deepseek-travels-chat/src/services/: chatService.ts
demo/: DeepSeek.pptx  demo_template 1.pptx  hackathon.pptx  team_gemini_2025.pptx
src/: README.md
src/agent/: README.md  attractions.ipynb  cinema.ipynb  env.example  menu.ipynb  packing_engine.py  packing_list.ipynb  packing_models.py  packing_requirements.txt  requirements.txt
src/agent/cli/: deepseek_travels_cli.py
src/frontend/: README.md  package-lock.json  package.json
src/mcp/booking-mcp/: README.md  __init__.py  booking_service.py  config.py  fixtures.py  main.py  models.py  pyproject.toml  utils.py
src/mcp/travel-requirements-mcp/: README.md  __init__.py  config.py  main.py  models.py  pyproject.toml  travel_requirements_service.py  utils.py
tests/: __init__.py
tests/unit/: __init__.py  test_assistant_service.py  test_booking_flow.py  test_cli_entrypoint.py  test_engine_scaling.py  test_fitters_constraints.py  test_mcp_clients.py  test_packing_engine.py  test_requirements_integration.py  test_simple_mode.py  test_weather_integration.py
(+107 files in other folders)
