[project]
name = "booking-mcp"
version = "0.1.0"
description = "Booking MCP Server - search and book flights, hotels, activities with confirmation flow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.13.1",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"